# arch-test

./: .env.example  .gitignore  Makefile
backend/src/test_service/: README.md  alembic.ini  main.py  pyproject.toml
backend/src/test_service/core/postgres/: async_session.py
backend/src/test_service/core/settings/: settings.py
backend/src/test_service/internal/common/exceptions/: authorization.py  default.py  fakestoreapi.py
backend/src/test_service/internal/common/responses/: failed.py
backend/src/test_service/internal/controllers/http/: extensions.py  router.py
backend/src/test_service/internal/controllers/http/products/: router.py  schemas.py
backend/src/test_service/internal/di/authorization/: token.py
backend/src/test_service/internal/di/products/: repository.py  service.py
backend/src/test_service/internal/models/: __init__.py  product.py
backend/src/test_service/internal/repositories/products/: abstract.py  repository.py
backend/src/test_service/internal/schemas/: product.py
backend/src/test_service/internal/schemas/fakestoreapi/: product.py
backend/src/test_service/internal/services/products/: abstract.py  service.py
backend/src/test_service/migrations/: env.py
backend/src/test_service/migrations/versions/: f9c4704338c0_init_migration.py
docker/: docker-compose.local.yml
docker/backend/test_service/: Dockerfile
